Fixed #4 layout issues

--- a/applications/rml/static/css/main.css
+++ b/applications/rml/static/css/main.css
@@ -1,6 +1,12 @@
  /* THESE ARE BASIC STYLES AND REFERENCES */
 body {
   margin: 0 0 0 0;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -27,8 +33,7 @@ p, a, b, li, input, button{
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  width: 80%;
 
   opacity: 0;
   transition: opacity ease-in-out 1000ms;
